--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -88,16 +88,16 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+  box-shadow: 0px 0px 15px grey;
+  min-height: 360px;
+  min-width: 350px;
+  transition: color 0.15s ease, box-shadow 0.15s ease;
 }
 
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  box-shadow: 0px 0px 30px grey;
 }
 
 .card h3 {
